// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NavigationMenu > mounts 1`] = `
"<nav data-v-fe35c617=\\"\\" class=\\"navigation-menu\\">
  <ul data-v-fe35c617=\\"\\" class=\\"navigation-menu__link-container\\"><a data-v-fe35c617=\\"\\" href=\\"/\\" class=\\"navigation-menu__link\\">Home</a><a data-v-fe35c617=\\"\\" href=\\"/search\\" class=\\"navigation-menu__link\\">Search</a><a data-v-fe35c617=\\"\\" href=\\"/selection\\" class=\\"navigation-menu__link relative\\">Selection
      <!--v-if-->
    </a></ul>
</nav>"
`;

exports[`NavigationMenu > shows selection size 1`] = `
"<nav data-v-fe35c617=\\"\\" class=\\"navigation-menu\\">
  <ul data-v-fe35c617=\\"\\" class=\\"navigation-menu__link-container\\"><a data-v-fe35c617=\\"\\" href=\\"/\\" class=\\"navigation-menu__link\\">Home</a><a data-v-fe35c617=\\"\\" href=\\"/search\\" class=\\"navigation-menu__link\\">Search</a><a data-v-fe35c617=\\"\\" href=\\"/selection\\" class=\\"navigation-menu__link relative\\">Selection <div data-v-fe35c617=\\"\\" class=\\"navigation-menu__selection-size\\">1</div></a></ul>
</nav>"
`;
